# Cor_trading

./: .coverage  .coveragerc  .flake8  .gitignore  GEMINI.md  README.md  SYSTEM_TECH_DOC.md  aggregate_backtest_reports.py  analyze_backtest_results.py  backtest_analysis_summary.txt  comprehensive_backtest_analysis.py  detailed_technical_analysis.py  final_comprehensive_backtest_analysis.txt  granular_regime_analysis.py  granular_regime_analysis_report.txt  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_backtest.py  simple_test_signal_optimization.py  state.json  test_features_regime.py  test_performance_metrics.py  test_regime_features.py  test_risk_execution.py  test_signal_optimization.py  trade_level_analysis_output.txt  trade_level_regime_analysis.py
Docs/: bucketed_performance.md
backtest_results/: usdcad_wti_backtest_20250821_112149.csv  usdcad_wti_backtest_20250821_112216.csv  usdcad_wti_report_20250820_112418.txt  usdcad_wti_report_20250820_120428.txt  usdcad_wti_report_20250821_111940.txt  usdcad_wti_report_20250821_112149.txt  usdcad_wti_report_20250821_112216.txt  usdcad_wti_report_20250821_121045.txt  usdcad_wti_report_20250821_121229.txt  usdcad_wti_report_20250917_115706.txt  usdcad_wti_report_20250917_120807.txt  usdcad_wti_signals_20250821_112149.csv  usdcad_wti_signals_20250821_112216.csv  usdnok_brent_backtest_20250821_112249.csv  usdnok_brent_backtest_20250821_112327.csv  usdnok_brent_report_20250821_112249.txt  usdnok_brent_report_20250821_112327.txt  usdnok_brent_report_20250917_132914.txt  (+2 more)
configs/: pairs.yaml  risk.yaml  (+1 more)
(+101 files in other folders)
