# pyproject.toml

[project]
name = "cor_trading"
version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = """
    --verbose
    --tb=short
    --strict-markers
    --disable-warnings
    --cov=src
    --cov-report=term-missing
    --cov-report=html:htmlcov
    --cov-fail-under=90
"""
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
    "signal_optimization: marks tests for signal optimization module",
    "regime_expansion: marks tests for regime expansion module",
    "risk_execution: marks tests for risk and execution module",
    "performance_metrics: marks tests for performance metrics module",
    "model_diversification: marks tests for model diversification module",
    "architecture: marks tests for architecture module",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 120
extend-ignore = ["E203", "W503", "E501", "W291", "W292", "W293", "E305", "F541"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "venv",
    ".venv",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
ignore_missing_imports = true
mypy_path = "src"
